# loopstack

./: LICENSE  README.md  RELEASE.md  pyproject.toml
loopstack/: __init__.py  agent_runtime.py  agent_trace.py  autoresearch_runtime.py  cli.py  compiler.py  compiler_codegen.py  compiler_prompts.py  output_parsers.py  runtime.py  stdlib.py  taskfile.py  tool_environment.py  workflow_spec.py
tests/: test_agent_runtime.py  test_autoresearch_runtime.py  test_cli.py  test_taskfile.py
